update jsdeliver link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>BinaryNumberContentViewer</title>
     <!-- Since GitHub Raw files use text/plain as MIME type the script cannot be executed when linking directly, instead routed over jsdelivr-->
-    <script src="https://cdn.jsdelivr.net/gh/MicroContent/BinaryNumberContentViewer/seamless.child.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/MicroContent/BinaryNumberContentViewer@master/seamlessjs/seamless.child.min.js"></script>
     <script type="application/javascript">
         var connection = window.seamless.connect({
             url: window.location.url,
